scss/grouparoo.scss
// -- Variables --
@import "_variables.scss";

// -- External Components --
@import "~bootstrap/scss/bootstrap";
@import "~@fortawesome/fontawesome-svg-core/styles.css";
@import "../public/css/prism";

$mobile-display-breakpoint: 600px;
$mobile-font-breakpoint: 800px;

// Page Defaults
body {
  background-color: $grouparoo-background-blue;
}

form {
  > div {
    margin-bottom: 1rem;
  }
}

// -- Typography --
.text-big-muted {
  @extend .text-muted;
  font-weight: 400;
  font-size: 24px;
  line-height: 28px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font-header;
  word-break: break-word;
}

h1 {
  font-size: 72px;
  font-style: normal;
  font-weight: 800;
  line-height: 72px;
  letter-spacing: -1px;

  @media screen and (max-width: $mobile-font-breakpoint) {
    font-size: 40px;
  }
}

h2 {
  font-size: 36px;
  font-style: normal;
  font-weight: 700;
  line-height: 43px;
  letter-spacing: -1px;

  @media screen and (max-width: $mobile-font-breakpoint) {
    font-size: 25px;
  }
}

h3 {
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 36px;
  letter-spacing: 0px;

  @media screen and (max-width: $mobile-font-breakpoint) {
    font-size: 20px;
  }
}

h4 {
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: -0.4399999976158142px;
}

h5 {
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 21px;
  letter-spacing: -0.4399999976158142px;
}

body {
  font-family: $font-body;
  font-size: 16px;
  font-weight: 400;
  font-style: normal;
  line-height: 27px;
  letter-spacing: 0px;
  text-align: left;
  color: $grouparoo-font-color;
  overflow-x: hidden;

  .big {
    font-size: 26px;
    font-weight: 300;
    line-height: 39px;
  }

  .bold {
    font-size: 16px;
    font-weight: 600;
    line-height: 27px;
  }

  .small {
    font-size: 14px;
    line-height: 24px;

    &.bold {
      font-size: 14px;
      line-height: 24px;
      font-weight: 400;
    }
  }

  .xs-small {
    font-size: 12px;
    line-height: 20px;
  }

  .normalize {
    font-weight: 400;
    font-family: $font-body;
  }

  .solid {
    color: $grouparoo-solid;
  }
}

.weave {
  background: url(/images/home/weave.png), #eff4ff;
  background-position: center;
  background-size: contain;
}

.outline {
  font-family: IBM Plex Sans;
  font-style: normal;
  font-weight: 300;
  font-size: 26px;
  line-height: 150%;
}

.btn,
.btn > * {
  font-family: $font-header;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 21px;
  letter-spacing: 0px;
}

code,
pre,
pre > code,
code[class*="language-"],
.code {
  font-family: $font-code;
  font-weight: 500;
  line-height: 25.5px;
}

a,
.btn-link {
  text-decoration: none;
}

// -- Nav Bar--

.nav-link {
  font-size: 0.95rem;
}

#basic-nav-dropdown {
  font-size: 0.95rem;
}

#seeMoreLink {
  color: $grouparoo-blue-gray;
}

#seeMoreLink:hover {
  font-weight: 400;
}
.dropdown-menu {
  padding: 1em;
}

.dropdown-item:hover {
  outline: none;
  box-shadow: none;
  background: none;
}

.dropdown-item {
  height: 2em;
  padding-left: 0em;
}

.dropdown-header {
  font-weight: 600;
  padding-left: 0em;
}

@media only screen and (min-width: $mobile-display-breakpoint) {
  .solutionsNav {
    width: 22em;
    padding-bottom: 1em;
  }
  .integrationsNav {
    width: 28em;
    padding-bottom: 1em;
  }
}

.pipes {
  // This pipes image has been manually set to 40% transparency
  background: url("../public/images/home/pipes.png"),
    linear-gradient(
      225.01deg,
      #000000 0%,
      #0b2e4e 0.01%,
      #0a2540 99.99%,
      #06182c 100%
    );
  background-repeat: repeat, no-repeat;
  background-size: 450px, auto;

  padding-bottom: 40px;

  *,
  .nav-bar > * {
    color: $grouparoo-nav-font-color;

    .nav-link {
      color: $grouparoo-nav-font-color !important;
    }
  }

  .btn {
    color: $grouparoo-font-color;
  }

  .dropdown-menu {
    background-color: #fff;
    .nav-link,
    .dropdown-header {
      color: $grouparoo-font-color !important;
    }
  }
}

// -- Get Started --
#getStartedContainer {
  background-color: #e9ecef;
}

// -- Homepage --
.homePageSection {
  padding-top: 50px;
  padding-bottom: 50px;
}

.homepageBlueH3 {
  color: $grouparoo-blue;
}

// -- Comparison Pages --
.comparisonContent {
  p,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    max-width: 740px;
    margin-left: auto;
    margin-right: auto;
    padding: 15px 40px 15px 40px;
  }
  ol,
  ul {
    max-width: 680px;
    margin-left: auto;
    margin-right: auto;
    padding: 15px 40px 15px 40px;
  }
  .container-fluid {
    width: 100vw;
  }
}

.featureBanner {
  h3,
  p {
    padding: 0px;
  }
}
.comparisonTableText {
  font-size: 80%;
}

.comparisonTableCell {
  width: 35%;
}

.comparisonTableLabelCell {
  width: 30%;
}
// -- Integrations Pages --

.integrationsBlueH3 {
  color: $grouparoo-blue;
}

.integrationCard:hover {
  box-shadow: 5px 5px 5px 5px grey;
}

// -- Page Content --
.imageOutline {
  border-color: lightgray;
  border-width: 2px;
  border-style: solid;
}

code[class*="language-"] {
  font-size: 14px;
  line-height: 10px;
}

pre > code {
  color: #f8f8f2;
  font-size: 87.5%;
}

// -- Header --
header {
  font-weight: 400;
}

// -- Footer --
footer {
  color: $grouparoo-nav-font-color;
  background-color: $grouparoo-dark-gray;
  font-size: 14px;
}

footer a {
  text-decoration: none;
  color: $grouparoo-nav-font-color;
}

// -- HR --
hr {
  border: 1px solid $grouparoo-blue;
}

// -- MDX--
.mdxContent {
  h1 a,
  h2 a,
  h3 a,
  h4 a,
  h5 a,
  h6 a {
    color: $grouparoo-dark-gray;
  }

  blockquote {
    // using defaults from bootstrap
    // .blockquote
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
    margin: 0 0 1rem;
    font-size: 1.25rem;
    // .text-center
    text-align: center !important;
    // change background and padding
    background-color: $light;
    padding: 1rem 1rem 0.25rem 1rem;
  }
}

// -- What's New --
.releasePage .metadata {
  color: $grouparoo-light-gray;
  font-size: 1rem;
}

// -- Documentation --

// -- Docs --

.documentationPage {
  font-size: 15px;

  h1 a,
  h2 a,
  h3 a,
  h4 a,
  h5 a,
  h6 a {
    color: $grouparoo-dark-gray;
  }

  h2,
  h3 {
    padding-top: 20px;
    padding-bottom: 20px;
  }

  h2::after {
    content: " ";
    display: block;
    border: 1px solid $grouparoo-blue-gray;
  }

  li {
    margin-bottom: 1rem; // matches <p>
  }

  .nav-item {
    margin-bottom: 0px;
  }

  .nav-tabs {
    border-bottom: none;
  }

  .tab-content {
    background-color: #fff;
    border: 1px solid #dee2e6;
    border-radius: 0.25rem;
    margin-bottom: 1rem;
  }
}

.docsTableOfContents {
  .sectionHeading {
    display: block;

    & + .sectionHeading {
      margin-top: 1rem;
    }
  }

  ul {
    padding-inline-start: 1rem;
  }
}

//docs group rules tables:
.table-responsive::-webkit-scrollbar {
  -webkit-appearance: none;
}

.table-responsive::-webkit-scrollbar:vertical {
  width: 12px;
}

.table-responsive::-webkit-scrollbar:horizontal {
  height: 12px;
}

.table-responsive::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 10px;
  border: 2px solid #ffffff;
}

.table-responsive::-webkit-scrollbar-track {
  border-radius: 10px;
  background-color: #ffffff;
}

// -- Code --
// @import url(/css/prism.css);

.video-responsive {
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
  height: 0;
  margin-top: 20px;
  margin-bottom: 20px;
}
.video-responsive iframe {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
}
// -- Tables --

.docTable {
  width: 100%;
  margin-top: 12px;
  margin-bottom: 20px;
}

.docTable tr:nth-child(odd) {
  background-color: #efefef;
}

.docTable tr:first-child {
  background-color: #dedede;
  text-align: center;
  font-weight: bold;
}

.docTable td,
th {
  border: 1px solid black;
  padding: 10px;
}

.docTable td:first-child,
th:first-child {
  width: 25%;
}

.notesTable {
  width: 100%;
  margin-top: 12px;
  margin-bottom: 20px;
}

.notesTable tr:nth-child(odd) {
  background-color: #efefef;
}

.notesTable tr:first-child {
  background-color: #dedede;
  text-align: center;
  font-weight: bold;
}

.notesTable td,
th {
  border: 1px solid black;
  padding: 10px;
}

.notesTable td:first-child,
th:first-child {
  width: 1%;
}

// -- trial --

@media only screen and (min-width: 991px) {
  .trialContainer {
    min-height: 100vh;
    // max-height: 100vh;
  }
}

#privacy-policy-check {
  margin-top: 3.7px;
}

